# Deus_Ex_Machina

./: CMakeLists.txt  README.md  vcpkg.json
src/: Atom.cpp  Atom.h  Cell.cpp  Cell.h  Console.cpp  Console.h  Fundamentals.cpp  Fundamentals.h  Space.cpp  Space.h  main.cpp
